# api/account.go
@@ -5,10 +5,8 @@ import (
 	"log-backend/autogen"
 	"log-backend/internal/models"
 	"net/http"
-	"os"
-	"time"
 
-	"github.com/golang-jwt/jwt/v5"
+	"github.com/gorilla/sessions"
 	"github.com/labstack/echo/v4"
 	"github.com/sirupsen/logrus"
 	"golang.org/x/crypto/bcrypt"
@@ -40,31 +38,27 @@ func (s Server) PostLogin(ctx echo.Context) error {
 		return nil
 	}
 
-	// Create token
-	token := jwt.New(jwt.SigningMethodHS256)
-
-	// Set claims
-	claims := token.Claims.(jwt.MapClaims)
-	claims["AccountID"] = account.ID
-	claims["exp"] = time.Now().Add(time.Hour * 24).Unix()
-
-	// Generate encoded token
-	t, err := token.SignedString([]byte(os.Getenv("JWT_SECRET")))
+	// Create new session
+	session, err := store.Get(ctx.Request(), SessionName)
 	if err != nil {
-		autogen.PostLogin500JSONResponse{Message: "Can't generate the token"}.VisitPostLoginResponse(ctx.Response())
+		autogen.PostLogin500JSONResponse{Message: "Unable to create session"}.VisitPostLoginResponse(ctx.Response())
 		return err
 	}
 
-	cookie := new(http.Cookie)
-	cookie.Name = "token"
-	cookie.Value = t
-	cookie.Expires = time.Now().Add(24 * time.Hour) // Cookie valid for 24 hours
-	// cookie.HttpOnly = true                          // Prevents JavaScript from accessing the cookie
-	// cookie.Secure = true                            // Ensure the cookie is sent over HTTPS (in production)
-	// cookie.Path = "/"
+	// Set session values
+	session.Values["authenticated"] = true
+	session.Values["user_id"] = account.ID
+	session.Options = &sessions.Options{
+		Path:     "/",
+		MaxAge:   86400, // 24 hours
+		HttpOnly: true,  // Prevents JavaScript from accessing the cookie
+	}
 
-	// Set the cookie in the response
-	ctx.SetCookie(cookie)
+	// Save session
+	if err := session.Save(ctx.Request(), ctx.Response().Writer); err != nil {
+		autogen.PostLogin500JSONResponse{Message: "Unable to save session"}.VisitPostLoginResponse(ctx.Response())
+		return err
+	}
 	autogen.PostLogin200JSONResponse{Message: "Login Success"}.VisitPostLoginResponse(ctx.Response())
 	return nil
 }
@@ -124,27 +118,46 @@ func (s Server) GetAccountsClubId(ctx echo.Context, clubId int) error {
 	return nil
 }
 
-func (s Server) GetAccount(ctx echo.Context) error {
-	AccountID, err := GetAccountIDFromJWT(ctx)
+func (s Server) PostLogout(ctx echo.Context) error {
+	session, err := store.Get(ctx.Request(), SessionName)
 	if err != nil {
-		logrus.Error(err)
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"message": "Could not get session"})
+	}
+
+	// Clear session values
+	session.Values["authenticated"] = false
+	session.Values["user_id"] = nil
+	session.Options.MaxAge = -1 // Delete the cookie
+
+	err = session.Save(ctx.Request(), ctx.Response().Writer)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"message": "Could not save session"})
+	}
+
+	return ctx.JSON(http.StatusOK, map[string]string{"message": "Successfully logged out"})
+}
+
+func (s Server) GetAccount(ctx echo.Context) error {
+	userID := ctx.Get("user_id")
+	if userID == nil {
+		logrus.Error("No user ID in context")
 		autogen.GetAccount401JSONResponse{Message: "Unauthorized"}.VisitGetAccountResponse(ctx.Response())
-		return err
+		return errors.New("unauthorized")
 	}
 	var account models.Account
-	result_account := s.db.Where("id = ?", AccountID).First(&account)
+	result_account := s.db.Where("id = ?", userID).First(&account)
 	if result_account.Error != nil {
 		autogen.GetAccount500JSONResponse{Message: "Can't access to the DB"}.VisitGetAccountResponse(ctx.Response())
 		return result_account.Error
 	}
 	resp := autogen.GetAccount200JSONResponse{
-		UserId: uint(AccountID),
+		UserId:    uint(userID.(uint)),
 		FirstName: account.FirstName,
-		LastName: account.LastName,
-		Group: &account.Group,
-		ClubId: &account.ClubId,
+		LastName:  account.LastName,
+		Group:     &account.Group,
+		ClubId:    &account.ClubId,
 	}
 	resp.VisitGetAccountResponse(ctx.Response())
-	logrus.Info(AccountID)
+	logrus.Info("Retrieved account for user: ", userID)
 	return nil
 }
